--- a/SV15-2022_David_Stakic/SV15-2022_David_Stakic/SV15-2022_David_Stakic.vcxproj.filters
+++ b/SV15-2022_David_Stakic/SV15-2022_David_Stakic/SV15-2022_David_Stakic.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="Files.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Sudoku9.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
