--- a/SV15-2022_David_Stakic/SV15-2022_David_Stakic/SV15-2022_David_Stakic.vcxproj.filters
+++ b/SV15-2022_David_Stakic/SV15-2022_David_Stakic/SV15-2022_David_Stakic.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Files.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="menu.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -30,6 +33,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Sudoku9.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="menu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
