Added tests for all functions

--- a/SV15-2022_David_Stakic/SV15-2022_David_Stakic/SV15-2022_David_Stakic.vcxproj
+++ b/SV15-2022_David_Stakic/SV15-2022_David_Stakic/SV15-2022_David_Stakic.vcxproj
@@ -142,12 +142,14 @@
     <ClInclude Include="Files.hpp" />
     <ClInclude Include="menu.hpp" />
     <ClInclude Include="Sudoku9.hpp" />
+    <ClInclude Include="Test.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Files.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="menu.cpp" />
     <ClCompile Include="Sudoku9.cpp" />
+    <ClCompile Include="Test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
