--- a/SV15-2022_David_Stakic/SV15-2022_David_Stakic/SV15-2022_David_Stakic.vcxproj.filters
+++ b/SV15-2022_David_Stakic/SV15-2022_David_Stakic/SV15-2022_David_Stakic.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="menu.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Test.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="menu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
